Add Demo02 : ViewData + Demo03 : Shop

--- a/ASPMVC-Demo01/Views/Home/Index.cshtml
+++ b/ASPMVC-Demo01/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
     <nav>
         <ul>
             <li><a href="/home/demo01">Démonstration 1</a></li>
-            <li><a>Démonstration 2</a></li>
-            <li><a>Démonstration 3</a></li>
+            <li><a href="/home/demo02">Démonstration 2</a></li>
+            <li><a href="/Shop">Démonstration 3 : Shop</a></li>
         </ul>
     </nav>
 </body>
