Update Demo03 : Shop (ViewDataAttribute)

--- a/ASPMVC-Demo01/Views/Shop/Details.cshtml
+++ b/ASPMVC-Demo01/Views/Shop/Details.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Démonstrations : Liste de produits</title>
+    <title>Démonstrations : @ViewData["Title"]</title>
 </head>
 <body>
     <h1>Démonstrations d'utilisation de l'identifiant d'une liste de produits</h1>
