--- a/ASPMVC-Demo01/Views/Shop/Index.cshtml
+++ b/ASPMVC-Demo01/Views/Shop/Index.cshtml
@@ -2,14 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    string[] products = (string[])ViewData["products"];
+    //string[] products = (string[])ViewData["products"];
+    string[] products = (string[])ViewData["Products"];
 }
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Démonstrations : Liste de produits</title>
+    <title>Démonstrations : @ViewData["Title"]</title>
 </head>
 <body>
     <h1>Démonstrations d'utilisation de l'identifiant d'une liste de produits</h1>
