--- a/ASPMVC-Demo01/Views/Home/Demo02.cshtml
+++ b/ASPMVC-Demo01/Views/Home/Demo02.cshtml
@@ -11,7 +11,8 @@
         <title>Démonstration : ViewData / ViewBag</title>
     </head>
     <body>
-        <h1>ViewData</h1>
+        <h1>Démonstrations : ViewData / ViewBag</h1>
+        <h2>ViewData</h2>
         <p>@ViewData["text"]</p>
         @if(ViewData["id"] is null){
             <p>Nous n'avons pas de paramètre 'id' dans notre URL.</p>
@@ -19,5 +20,16 @@
         else{
             <p>Voici l'id intercepté par mon controller provenant de l'URL : @ViewData["id"]</p>
         }
+
+        <h2>ViewBag</h2>
+        <p>À l'aide du ViewBag, il est possible d'obtenir directement les valeurs du ViewData.</p>
+        <p>@ViewBag.text</p>
+        @if(ViewBag.id is null){
+            <p>Nous n'avons pas de paramètre 'id' dans notre URL.</p>
+        }
+        else{
+            <p>Voici l'id intercepté par mon controller provenant de l'URL : @ViewBag.id</p>
+        }
+        <p>Le ViewBag a l'avantage d'être dynamic, ce qui veut dire que nous n'obtenons plus un object en résultat, mais que la valeur stockée est dynamiquement casté dans le bon type.<br>Autre avantage, l'utilisation d'un type dynamique diminue les chances d'erreur d'écriture de la variable pas le format string.</p>
     </body>
 </html>
