--- a/ASPMVC-Demo01/Views/Shop/Index.cshtml
+++ b/ASPMVC-Demo01/Views/Shop/Index.cshtml
@@ -13,6 +13,12 @@
     <title>Démonstrations : @ViewData["Title"]</title>
 </head>
 <body>
+    @if (TempData.ContainsKey("errorMessage"))
+    {
+        <div style="background-color:rgb(255,200,200);color:rgb(64,0,0);border:solid 1px rgb(64,0,0);margin:20px;padding:15px;border-radius:15px; text-align : center">
+            <p>@TempData["errorMessage"]</p>
+        </div>
+    }
     <h1>Démonstrations d'utilisation de l'identifiant d'une liste de produits</h1>
     <ul>
         @for (int i = 0; i < products.Length; i++)
