Add Demo06-Formulaires (Début)

--- a/ASPMVC-Demo01/Views/Home/Index.cshtml
+++ b/ASPMVC-Demo01/Views/Home/Index.cshtml
@@ -20,6 +20,8 @@
             <li><a href="/home/demo02">Démonstration 2</a></li>
             <li><a href="/Shop">Démonstration 3 : Shop</a></li>
             <li><a href="/home/demo04">Démonstration 4</a></li>
+            <li><a href="/home/demo05">Démonstration 5</a></li>
+            <li><a href="/home/demo06">Démonstration 6</a></li>
         </ul>
     </nav>
 </body>
