--- a/ASPMVC-Demo01/Views/Home/Demo06.cshtml
+++ b/ASPMVC-Demo01/Views/Home/Demo06.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@using Microsoft.AspNetCore.Mvc.ModelBinding
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -12,6 +13,29 @@
 </head>
 <body>
     <h1>Démonstrations : Formulaire</h1>
+    @if (!ViewContext.ModelState.IsValid)
+    {
+        <div style="background-color:rgb(255,128,128); padding : 15px; border : 2px solid rgb(64,0,0); color : rgb(64,0,0); border-radius : 15px;">
+            <p>Vous avez dans votre fomulaire : @ViewContext.ModelState.ErrorCount erreur(s)</p>
+            <ul>
+                @foreach(KeyValuePair<string, ModelStateEntry> entry in ViewContext.ModelState)
+                {
+                    if(entry.Value.Errors.Count() > 0)
+                    {
+                        <li>@entry.Key : 
+                            <ul>
+                                @foreach(ModelError error in entry.Value.Errors)
+                                {
+                                    <li>@error.ErrorMessage</li>
+                                }
+                            </ul>
+                        </li>
+                    }
+                }
+            </ul>
+        </div>
+    }
+
     <h2>Veuillez indiquer les renseignements concernant votre rendez-vous :</h2>
     <form method="post">
         <div>
